# webCAMO

./: .gitignore  README.md  create_installer.bat  start.bat
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/webcamo/: WebCAMOApplication.kt
android/app/src/main/kotlin/com/webcamo/service/: CameraStreamService.kt
android/app/src/main/kotlin/com/webcamo/signaling/: SignalingClient.kt
android/app/src/main/kotlin/com/webcamo/stream/: SimpleStreamer.kt
android/app/src/main/kotlin/com/webcamo/ui/: AutoConnectActivity.kt  MainActivity.kt  SimpleStreamActivity.kt
android/app/src/main/kotlin/com/webcamo/webrtc/: WebRTCClient.kt
android/app/src/main/res/drawable/: circle_button_background.xml  ic_launcher_foreground.xml  ic_switch_camera.xml  status_background.xml
android/app/src/main/res/layout/: activity_auto_connect.xml  activity_main.xml  activity_simple.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
clients/: .gitkeep
docs/: ARCHITECTURE.md  BUILD.md
signaling/: package-lock.json  package.json  server.js
windows/: CMakeLists.txt  build.bat  build_filter.bat  register_camera.bat
windows-python/: README.md  WebCAMO.spec  WebCAMO_Receiver.spec  receiver.py  start.bat  tcp_receiver.py  webcamo_gui.py
windows/include/: Application.h  Common.h  FrameBuffer.h  SignalingClient.h  SimpleReceiver.h  SystemTray.h  VirtualCamera.h  WebRTCReceiver.h
windows/src/: Application.cpp  FrameBuffer.cpp  SignalingClient.cpp  SimpleReceiver.cpp  SystemTray.cpp  VirtualCamera.cpp  WebRTCReceiver.cpp  main.cpp
windows/src/filter/: VirtualCameraFilter.cpp  VirtualCameraFilter.def  WebCAMOFilter.cpp  WebCAMOFilter.def  WebCAMOFilter.exp
